test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_items/src/enum_impl_assoc_fn.sw
library;

enum E {
    A: (),
}

impl E {
    #[test(invalid)]
    #[payable(invalid)]
    //! Invalid inner comment.
    #[deprecated(invalid)]
    #[fallback(invalid)]
    fn assoc_fn() {}
}
